--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -76,22 +76,22 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Place Bomb",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Debug Key",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
-+ActionMappings=(ActionName="Move Up",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
-+ActionMappings=(ActionName="Move Down",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
-+ActionMappings=(ActionName="Move Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
-+ActionMappings=(ActionName="Move Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
-+ActionMappings=(ActionName="Move Up",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
-+ActionMappings=(ActionName="Move Down",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
-+ActionMappings=(ActionName="Move Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
-+ActionMappings=(ActionName="Move Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
-+AxisMappings=(AxisName="Move",Scale=1.000000,Key=A)
-+AxisMappings=(AxisName="Move",Scale=1.000000,Key=S)
-+AxisMappings=(AxisName="Move",Scale=1.000000,Key=Up)
-+AxisMappings=(AxisName="Move",Scale=1.000000,Key=Down)
-+AxisMappings=(AxisName="Move",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="Move",Scale=1.000000,Key=Right)
-+AxisMappings=(AxisName="VV",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="DD",Scale=1.000000,Key=D)
++ActionMappings=(ActionName="Move Forward Pressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="Move Right Pressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="Move Forward Pressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="Move Right Pressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="Move Forward Pressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
++ActionMappings=(ActionName="Move Forward Pressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
++ActionMappings=(ActionName="Move Right Pressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
++ActionMappings=(ActionName="Move Right Pressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Move Right",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="Move Right",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=Right)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
